test_suite/tests/ui/conflict/internal-tag.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
#[serde(tag = "conflict")]
enum E {
    A {
        #[serde(rename = "conflict")]
        x: (),
    },
}

fn main() {}
